// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HostPodiumState > should render HostPodiumState 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
        >
          <button
            data-testid="test-fullscreen-button-button"
            id="fullscreen-button"
            name="fullscreen-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-maximize "
              data-icon="maximize"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M200 32L56 32C42.7 32 32 42.7 32 56l0 144c0 9.7 5.8 18.5 14.8 22.2s19.3 1.7 26.2-5.2l40-40 79 79-79 79L73 295c-6.9-6.9-17.2-8.9-26.2-5.2S32 302.3 32 312l0 144c0 13.3 10.7 24 24 24l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-40-40 79-79 79 79-40 40c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8l144 0c13.3 0 24-10.7 24-24l0-144c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2l-40 40-79-79 79-79 40 40c6.9 6.9 17.2 8.9 26.2 5.2s14.8-12.5 14.8-22.2l0-144c0-13.3-10.7-24-24-24L312 32c-9.7 0-18.5 5.8-22.2 14.8s-1.7 19.3 5.2 26.2l40 40-79 79-79-79 40-40c6.9-6.9 8.9-17.2 5.2-26.2S209.7 32 200 32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-skip-button-button"
            id="skip-button"
            name="skip-button"
            type="button"
          >
            <span>
              Quit
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right "
              data-icon="arrow-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content mediumWidth fullHeight startAlign"
    >
      <div
        class="typography subtitle full"
      >
        Podium
      </div>
      <div
        class="main"
      >
        <div
          class="column"
        >
          <div
            class="spacer"
          />
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              Radar
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              2
            </div>
            <div
              class="score"
            >
              18398
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              ShadowCyborg
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              1
            </div>
            <div
              class="score"
            >
              18456
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="spacer"
          />
          <div
            class="spacer"
          />
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              ShadowWhirlwind
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              3
            </div>
            <div
              class="score"
            >
              15492
            </div>
          </div>
        </div>
      </div>
      <div
        class="main"
      >
        <div
          class="column"
        >
          <div
            class="position"
          >
            <span>
              4
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <span>
              WhiskerFox
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <span
            class="score"
          >
            14118
          </span>
        </div>
        <div
          class="column"
        >
          <div
            class="position"
          >
            <span>
              5
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <span>
              JollyNimbus
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <span
            class="score"
          >
            13463
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HostPodiumState > should render HostPodiumState without a full leaderboard 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <div
          class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
        >
          <button
            data-testid="test-fullscreen-button-button"
            id="fullscreen-button"
            name="fullscreen-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-maximize "
              data-icon="maximize"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M200 32L56 32C42.7 32 32 42.7 32 56l0 144c0 9.7 5.8 18.5 14.8 22.2s19.3 1.7 26.2-5.2l40-40 79 79-79 79L73 295c-6.9-6.9-17.2-8.9-26.2-5.2S32 302.3 32 312l0 144c0 13.3 10.7 24 24 24l144 0c9.7 0 18.5-5.8 22.2-14.8s1.7-19.3-5.2-26.2l-40-40 79-79 79 79-40 40c-6.9 6.9-8.9 17.2-5.2 26.2s12.5 14.8 22.2 14.8l144 0c13.3 0 24-10.7 24-24l0-144c0-9.7-5.8-18.5-14.8-22.2s-19.3-1.7-26.2 5.2l-40 40-79-79 79-79 40 40c6.9 6.9 17.2 8.9 26.2 5.2s14.8-12.5 14.8-22.2l0-144c0-13.3-10.7-24-24-24L312 32c-9.7 0-18.5 5.8-22.2 14.8s-1.7 19.3 5.2 26.2l40 40-79 79-79-79 40-40c6.9-6.9 8.9-17.2 5.2-26.2S209.7 32 200 32z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div
          class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
        >
          <button
            data-testid="test-skip-button-button"
            id="skip-button"
            name="skip-button"
            type="button"
          >
            <span>
              Quit
            </span>
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-right "
              data-icon="arrow-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="content mediumWidth fullHeight startAlign"
    >
      <div
        class="typography subtitle full"
      >
        Podium
      </div>
      <div
        class="main"
      >
        <div
          class="column"
        >
          <div
            class="spacer"
          />
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              Radar
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              2
            </div>
            <div
              class="score"
            >
              18398
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              ShadowCyborg
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              1
            </div>
            <div
              class="score"
            >
              18456
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="spacer"
          />
          <div
            class="spacer"
          />
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              ShadowWhirlwind
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              3
            </div>
            <div
              class="score"
            >
              15492
            </div>
          </div>
        </div>
      </div>
      <div
        class="main"
      />
    </div>
  </div>
</div>
`;
